# panel-everything

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
.claude/: CLAUDE.md
docs/architecture/: ARCH-001.md  ARCH-002.md  ARCH-003.md  ARCH-004.md
docs/deployment/: DEPLOY.md  SETUP-AZURE-SP.md
docs/modules/: 01-app-assembly.md  02-config.md  03-db.md  04-collectors-framework.md  05-collectors-azure-gpu.md  06-collectors-tailscale.md  07-api.md  08-web.md  09-domain.md  10-reporter.md  README.md
docs/progress/: STATUS.md
docs/requirements/: REQ-001.md  REQ-002.md  REQ-003.md  REQ-004.md
docs/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-030.md  TASK-031.md  TASK-032.md  TASK-033.md  TASK-040.md
docs/templates/: ARCH_TEMPLATE.md  BUG_TEMPLATE.md  REQ_TEMPLATE.md  (+2 more)
roles/: ROLE_Architect.md  ROLE_Coder.md  ROLE_PM.md
scripts/: install_reporter_cron.sh  run_reporter.sh  seed_a100.sh
tests/: test_ai_card.py  test_azure_collector.py  test_azure_public_ip.py  test_collectors.py  test_config.py  test_dashboard_azure.py  test_db.py  test_frontend_vm_gpu.py  test_gpu_collector.py  test_gpu_downsample.py  test_gpu_dynamic_host.py  test_gpu_schema.py  test_gpu_trend.py  test_health.py  test_ingest.py  test_retention.py  test_servers_api.py  test_tailscale_api.py  test_web.py
(+75 files in other folders)
